Resolved the issues with: DailyOrder start date changed.. PDF Download is added fro Daily Order Start date is now being show to CustomerList DailyOrderGroundReport is prepared so that daily orders can be see in Overview tab.

--- a/src/main/webapp/resources/ext/shared/icons/silk.css
+++ b/src/main/webapp/resources/ext/shared/icons/silk.css
@@ -167,6 +167,7 @@
 .silk-table-edit { background-image: url(fam/table_edit.png) !important; background-repeat: no-repeat; }
 .silk-table-multiple { background-image: url(fam/table_multiple.png) !important; background-repeat: no-repeat; }
 .silk-table-refresh { background-image: url(fam/table_refresh.png) !important; background-repeat: no-repeat; }
+.silk-pdf { background-image: url(fam/page_white_acrobat.png) !important; background-repeat: no-repeat; }
 .silk-tag-blue-edit { background-image: url(fam/tag_blue_edit.png) !important; background-repeat: no-repeat; }
 .silk-tag { background-image: url(fam/tag.png) !important; background-repeat: no-repeat; }
 .silk-telephone { background-image: url(fam/telephone.png) !important; background-repeat: no-repeat; }
