--- a/src/main/webapp/resources/ext/shared/icons/silk.css
+++ b/src/main/webapp/resources/ext/shared/icons/silk.css
@@ -187,3 +187,4 @@
 .silk-wrench { background-image: url(fam/wrench.png) !important; background-repeat: no-repeat; }
 .silk-world { background-image: url(fam/world.png) !important; background-repeat: no-repeat; }
 .silk-zoom { background-image: url(fam/zoom.png) !important; background-repeat: no-repeat; }
+.myRowClass .x-grid-cell {background:#FF0000; }
